# debloating_tool

./: CMakeLists.txt  README.md
src/: Makefile  debloat.cpp  debloat.hpp  main.cpp
src/adb/: adb.cpp  adb.hpp  device.cpp  device.hpp  package.cpp  package.hpp
src/cli/: args.cpp  args.hpp
src/cmd/: exec.cpp  exec.hpp
src/debloat/: debloat.cpp  debloat.hpp
src/util/: util.cpp  util.hpp
tests/: adb_test.cpp  util_test.cpp
